<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
		 xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>com.yamltobot</groupId>
	<artifactId>yamltobot</artifactId>
	<version>4.0.0-INDEV.2</version>

	<name>YamlToBot</name>
	<description>Create a bot from the given YAML file.</description>

	<packaging>pom</packaging>

	<modules>
		<module>core</module>
		<module>discord</module>
		<module>twitch</module>
        <module>mixer</module>
    </modules>

  	<build>

  		<defaultGoal>clean compile package install shade:shade</defaultGoal>

	  	<plugins>

	  		<plugin>
	  			<groupId>org.apache.maven.plugins</groupId>
	  			<artifactId>maven-shade-plugin</artifactId>
	  			<version>3.2.1</version>
	  		</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.0</version>
				<configuration>
					<source>11</source>
					<target>11</target>
					<release>11</release>
				</configuration>
			</plugin>

	  		<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<version>3.1.1</version>
				<configuration>
					<archive>
						<manifest>
							<addClasspath>true</addClasspath>
							<classpathPrefix>lib/</classpathPrefix>
						</manifest>
					</archive>
				</configuration>
			</plugin>

	  	</plugins>

	</build>

</project>
